<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cosmic.nasarssfeeddisplay.FeedDisplayActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/title_nasa" />

    <TextView
        android:id="@+id/kepler"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:textColor="@color/green"
        android:linksClickable="true"
        android:text="@string/kepler_news" />
    <TextView
        android:id="@+id/chandra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/green"
        android:text="@string/chandra" />
    <TextView
        android:id="@+id/solar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:textColor="@color/green"
        android:text="@string/solar_system" />

    <TextView
        android:id="@+id/hurricane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:textColor="@color/green"
        android:text="@string/hurricane" />
</LinearLayout>
